responsive screen 1 + tableau formations

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="first-line">
         Vos formations en cybersécurité
     </div>
-    <img src="ressources\logo_Formhack_tion_black-removebg-preview.png" alt="LOGO" class="logo-entree">
+    <img src="ressources\logo_Formhacktion_black-removebg-preview.png" alt="LOGO" class="logo-entree">
     <h1 class="catchphrase">
         Apprenez à protéger votre environement numérique
     </h1>
@@ -23,8 +23,20 @@
             </div>
         </div>
     </a>
+
     <div class="overlap-group">
-        <div class="formation-container">
+        <div class="line">
+            <div class="item">ert</div>
+            <div class="item">qsdf</div>
+            <div class="item">az</div>
+        </div>
+        <br>
+        <div class="line">
+            <div class="item">xcv</div>
+            <div class="item">gfhd</div>
+        </div>
+
+        <!-- <div class="formation-container">
             <div class="formation-resume">
                 <div class="formation-nom">
                     SÉCURITÉ E-MAILS
@@ -39,7 +51,7 @@
                     pharetra, tristique leo in, lobortis dui.
                 </p>
             </div>
-        </div>
+        </div> -->
     </div>
 </body>
 
