--- a/index.html
+++ b/index.html
@@ -4,54 +4,94 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <title>FormHack'tion</title>
 </head>
 
-<body>
-    <div class="first-line">
-        Vos formations en cybersécurité
-    </div>
-    <img src="ressources\logo_Formhacktion_black-removebg-preview.png" alt="LOGO" class="logo-entree">
-    <h1 class="catchphrase">
-        Apprenez à protéger votre environement numérique
-    </h1>
-    <a href="#formations">
-        <div class="button-1">
-            <div class="label">
-                CONSULTEZ NOS FORMATIONS
-            </div>
-        </div>
-    </a>
+<body class="background">
 
-    <div class="overlap-group">
-        <div class="line">
-            <div class="item">ert</div>
-            <div class="item">qsdf</div>
-            <div class="item">az</div>
+    <div class="container-fluid position-absolute top-0 start-50 translate-middle">
+        <div class="first-line">
+            Vos formations en cybersécurité
         </div>
-        <br>
-        <div class="line">
-            <div class="item">xcv</div>
-            <div class="item">gfhd</div>
-        </div>
-
-        <!-- <div class="formation-container">
-            <div class="formation-resume">
-                <div class="formation-nom">
-                    SÉCURITÉ E-MAILS
+        <img src="ressources\logo_Formhacktion_black-removebg-preview.png" alt="LOGO" class="logo-entree">
+        <h1 class="catchphrase">
+            Apprenez à protéger votre environement numérique
+        </h1>
+        <a href="#formations">
+            <div class="button-1">
+                <div class="label">
+                    CONSULTEZ NOS FORMATIONS
                 </div>
-                <img src="" alt="">
-                <p class="description">
-                    Description : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia justo leo, quis
-                    bibendum nunc elementum suscipit. Praesent molestie eros lacus, ac porttitor ex placerat vel. Nulla
-                    facilisi. Fusce finibus porttitor mattis. Suspendisse porta, neque sit amet vehicula volutpat,
-                    lectus neque dapibus est, ac mollis risus magna et diam. Etiam et consectetur magna. In iaculis
-                    porta lorem laoreet placerat. Maecenas dignissim arcu vitae consequat ultrices. Duis sed sem
-                    pharetra, tristique leo in, lobortis dui.
-                </p>
             </div>
-        </div> -->
+        </a>
+    </div>
+    <div class="container-fluid overlap-group">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 formation-resume">
+                    <h1 class="formation-nom">SÉCURITÉ E-MAILS</h1>
+                    <p class="description">
+                        Description : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia justo leo,
+                        quis bibendum nunc elementum suscipit. Praesent molestie eros lacus, ac porttitor ex placerat
+                        vel. Nulla facilisi. Fusce finibus porttitor mattis. Suspendisse porta, neque sit amet vehicula
+                        volutpat, lectus neque dapibus est, ac mollis risus magna et diam. Etiam et consectetur magna.
+                        In iaculis porta lorem laoreet placerat. Maecenas dignissim arcu vitae consequat ultrices. Duis
+                        sed sem pharetra, tristique leo in, lobortis dui.
+                    </p>
+                </div>
+                <div class="col-md-1"></div>
+                <div class="col-md-3 formation-resume">
+                    <h1 class="formation-nom">SÉCURITÉ E-MAILS</h1>
+                    <p class="description">
+                        Description : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia justo leo,
+                        quis bibendum nunc elementum suscipit. Praesent molestie eros lacus, ac porttitor ex placerat
+                        vel. Nulla facilisi. Fusce finibus porttitor mattis. Suspendisse porta, neque sit amet vehicula
+                        volutpat, lectus neque dapibus est, ac mollis risus magna et diam. Etiam et consectetur magna.
+                        In iaculis porta lorem laoreet placerat. Maecenas dignissim arcu vitae consequat ultrices. Duis
+                        sed sem pharetra, tristique leo in, lobortis dui.
+                    </p>
+                </div>
+                <div class="col-md-1"></div>
+                <div class="col-md-3 formation-resume">
+                    <h1 class="formation-nom">SÉCURITÉ E-MAILS</h1>
+                    <p class="description">
+                        Description : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia justo leo,
+                        quis bibendum nunc elementum suscipit. Praesent molestie eros lacus, ac porttitor ex placerat
+                        vel. Nulla facilisi. Fusce finibus porttitor mattis. Suspendisse porta, neque sit amet vehicula
+                        volutpat, lectus neque dapibus est, ac mollis risus magna et diam. Etiam et consectetur magna.
+                        In iaculis porta lorem laoreet placerat. Maecenas dignissim arcu vitae consequat ultrices. Duis
+                        sed sem pharetra, tristique leo in, lobortis dui.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3 formation-resume">
+                    <h1 class="formation-nom">SÉCURITÉ E-MAILS</h1>
+                    <p class="description">
+                        Description : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia justo leo,
+                        quis bibendum nunc elementum suscipit. Praesent molestie eros lacus, ac porttitor ex placerat
+                        vel. Nulla facilisi. Fusce finibus porttitor mattis. Suspendisse porta, neque sit amet vehicula
+                        volutpat, lectus neque dapibus est, ac mollis risus magna et diam. Etiam et consectetur magna.
+                        In iaculis porta lorem laoreet placerat. Maecenas dignissim arcu vitae consequat ultrices. Duis
+                        sed sem pharetra, tristique leo in, lobortis dui.
+                    </p>
+                </div>
+                <div class="col-md-1"></div>
+                <div class="col-md-3 formation-resume">
+                    <h1 class="formation-nom">SÉCURITÉ E-MAILS</h1>
+                    <p class="description">
+                        Description : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia justo leo,
+                        quis bibendum nunc elementum suscipit. Praesent molestie eros lacus, ac porttitor ex placerat
+                        vel. Nulla facilisi. Fusce finibus porttitor mattis. Suspendisse porta, neque sit amet vehicula
+                        volutpat, lectus neque dapibus est, ac mollis risus magna et diam. Etiam et consectetur magna.
+                        In iaculis porta lorem laoreet placerat. Maecenas dignissim arcu vitae consequat ultrices. Duis
+                        sed sem pharetra, tristique leo in, lobortis dui.
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
