--- a/index.html
+++ b/index.html
@@ -27,68 +27,101 @@
             </div>
         </a>
     </div>
-    <div class="container-fluid overlap-group">
+    <div id="formations" class="container-fluid overlap-group">
         <div class="container">
+            <br>
             <div class="row">
-                <div class="col-md-3 formation-resume">
-                    <h1 class="formation-nom">SÉCURITÉ E-MAILS</h1>
-                    <p class="description">
-                        Description : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia justo leo,
-                        quis bibendum nunc elementum suscipit. Praesent molestie eros lacus, ac porttitor ex placerat
-                        vel. Nulla facilisi. Fusce finibus porttitor mattis. Suspendisse porta, neque sit amet vehicula
-                        volutpat, lectus neque dapibus est, ac mollis risus magna et diam. Etiam et consectetur magna.
-                        In iaculis porta lorem laoreet placerat. Maecenas dignissim arcu vitae consequat ultrices. Duis
-                        sed sem pharetra, tristique leo in, lobortis dui.
-                    </p>
+                <div class="col-md-4">
+                    <div class="formation-resume px-3 pt-3">
+                        <h1 class="formation-nom">SÉCURITÉ E-MAILS</h1>
+                        <p class="description">
+                            Description : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia justo
+                            leo,
+                            quis bibendum nunc elementum suscipit. Praesent molestie eros lacus, ac porttitor ex
+                            placerat
+                            vel. Nulla facilisi. Fusce finibus porttitor mattis. Suspendisse porta, neque sit amet
+                            vehicula
+                            volutpat, lectus neque dapibus est, ac mollis risus magna et diam. Etiam et consectetur
+                            magna.
+                            In iaculis porta lorem laoreet placerat. Maecenas dignissim arcu vitae consequat ultrices.
+                            Duis
+                            sed sem pharetra, tristique leo in, lobortis dui.
+                        </p>
+                    </div>
                 </div>
-                <div class="col-md-1"></div>
-                <div class="col-md-3 formation-resume">
-                    <h1 class="formation-nom">SÉCURITÉ E-MAILS</h1>
-                    <p class="description">
-                        Description : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia justo leo,
-                        quis bibendum nunc elementum suscipit. Praesent molestie eros lacus, ac porttitor ex placerat
-                        vel. Nulla facilisi. Fusce finibus porttitor mattis. Suspendisse porta, neque sit amet vehicula
-                        volutpat, lectus neque dapibus est, ac mollis risus magna et diam. Etiam et consectetur magna.
-                        In iaculis porta lorem laoreet placerat. Maecenas dignissim arcu vitae consequat ultrices. Duis
-                        sed sem pharetra, tristique leo in, lobortis dui.
-                    </p>
+                <div class="col-md-4">
+                    <div class="formation-resume px-3 pt-3">
+                        <h1 class="formation-nom">SÉCURITÉ E-MAILS</h1>
+                        <p class="description">
+                            Description : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia justo
+                            leo,
+                            quis bibendum nunc elementum suscipit. Praesent molestie eros lacus, ac porttitor ex
+                            placerat
+                            vel. Nulla facilisi. Fusce finibus porttitor mattis. Suspendisse porta, neque sit amet
+                            vehicula
+                            volutpat, lectus neque dapibus est, ac mollis risus magna et diam. Etiam et consectetur
+                            magna.
+                            In iaculis porta lorem laoreet placerat. Maecenas dignissim arcu vitae consequat ultrices.
+                            Duis
+                            sed sem pharetra, tristique leo in, lobortis dui.
+                        </p>
+                    </div>
                 </div>
-                <div class="col-md-1"></div>
-                <div class="col-md-3 formation-resume">
-                    <h1 class="formation-nom">SÉCURITÉ E-MAILS</h1>
-                    <p class="description">
-                        Description : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia justo leo,
-                        quis bibendum nunc elementum suscipit. Praesent molestie eros lacus, ac porttitor ex placerat
-                        vel. Nulla facilisi. Fusce finibus porttitor mattis. Suspendisse porta, neque sit amet vehicula
-                        volutpat, lectus neque dapibus est, ac mollis risus magna et diam. Etiam et consectetur magna.
-                        In iaculis porta lorem laoreet placerat. Maecenas dignissim arcu vitae consequat ultrices. Duis
-                        sed sem pharetra, tristique leo in, lobortis dui.
-                    </p>
+                <div class="col-md-4">
+                    <div class="formation-resume px-3 pt-3">
+                        <h1 class="formation-nom">SÉCURITÉ E-MAILS</h1>
+                        <p class="description">
+                            Description : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia justo
+                            leo,
+                            quis bibendum nunc elementum suscipit. Praesent molestie eros lacus, ac porttitor ex
+                            placerat
+                            vel. Nulla facilisi. Fusce finibus porttitor mattis. Suspendisse porta, neque sit amet
+                            vehicula
+                            volutpat, lectus neque dapibus est, ac mollis risus magna et diam. Etiam et consectetur
+                            magna.
+                            In iaculis porta lorem laoreet placerat. Maecenas dignissim arcu vitae consequat ultrices.
+                            Duis
+                            sed sem pharetra, tristique leo in, lobortis dui.
+                        </p>
+                    </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 formation-resume">
-                    <h1 class="formation-nom">SÉCURITÉ E-MAILS</h1>
-                    <p class="description">
-                        Description : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia justo leo,
-                        quis bibendum nunc elementum suscipit. Praesent molestie eros lacus, ac porttitor ex placerat
-                        vel. Nulla facilisi. Fusce finibus porttitor mattis. Suspendisse porta, neque sit amet vehicula
-                        volutpat, lectus neque dapibus est, ac mollis risus magna et diam. Etiam et consectetur magna.
-                        In iaculis porta lorem laoreet placerat. Maecenas dignissim arcu vitae consequat ultrices. Duis
-                        sed sem pharetra, tristique leo in, lobortis dui.
-                    </p>
+                <div class="col-md-4">
+                    <div class="formation-resume px-3 pt-3">
+                        <h1 class="formation-nom">SÉCURITÉ E-MAILS</h1>
+                        <p class="description">
+                            Description : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia justo
+                            leo,
+                            quis bibendum nunc elementum suscipit. Praesent molestie eros lacus, ac porttitor ex
+                            placerat
+                            vel. Nulla facilisi. Fusce finibus porttitor mattis. Suspendisse porta, neque sit amet
+                            vehicula
+                            volutpat, lectus neque dapibus est, ac mollis risus magna et diam. Etiam et consectetur
+                            magna.
+                            In iaculis porta lorem laoreet placerat. Maecenas dignissim arcu vitae consequat ultrices.
+                            Duis
+                            sed sem pharetra, tristique leo in, lobortis dui.
+                        </p>
+                    </div>
                 </div>
-                <div class="col-md-1"></div>
-                <div class="col-md-3 formation-resume">
-                    <h1 class="formation-nom">SÉCURITÉ E-MAILS</h1>
-                    <p class="description">
-                        Description : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia justo leo,
-                        quis bibendum nunc elementum suscipit. Praesent molestie eros lacus, ac porttitor ex placerat
-                        vel. Nulla facilisi. Fusce finibus porttitor mattis. Suspendisse porta, neque sit amet vehicula
-                        volutpat, lectus neque dapibus est, ac mollis risus magna et diam. Etiam et consectetur magna.
-                        In iaculis porta lorem laoreet placerat. Maecenas dignissim arcu vitae consequat ultrices. Duis
-                        sed sem pharetra, tristique leo in, lobortis dui.
-                    </p>
+                <div class="col-md-4">
+                    <div class="formation-resume px-3 pt-3">
+                        <h1 class="formation-nom">SÉCURITÉ E-MAILS</h1>
+                        <p class="description">
+                            Description : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia justo
+                            leo,
+                            quis bibendum nunc elementum suscipit. Praesent molestie eros lacus, ac porttitor ex
+                            placerat
+                            vel. Nulla facilisi. Fusce finibus porttitor mattis. Suspendisse porta, neque sit amet
+                            vehicula
+                            volutpat, lectus neque dapibus est, ac mollis risus magna et diam. Etiam et consectetur
+                            magna.
+                            In iaculis porta lorem laoreet placerat. Maecenas dignissim arcu vitae consequat ultrices.
+                            Duis
+                            sed sem pharetra, tristique leo in, lobortis dui.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
