responsive main page + cgu base

--- a/index.html
+++ b/index.html
@@ -11,22 +11,36 @@
 
 <body class="background">
 
-    <div class="container-fluid position-absolute top-0 start-50 translate-middle">
-        <div class="first-line">
-            Vos formations en cybersécurité
-        </div>
-        <img src="ressources\logo_Formhacktion_black-removebg-preview.png" alt="LOGO" class="logo-entree">
-        <h1 class="catchphrase">
-            Apprenez à protéger votre environement numérique
-        </h1>
-        <a href="#formations">
-            <div class="button-1">
-                <div class="label">
-                    CONSULTEZ NOS FORMATIONS
-                </div>
-            </div>
-        </a>
+
+    <div class="first-line">
+        <p class="text-center mt-6">Vos formations en cybersécurité</p>
     </div>
+    <div class="container">
+        <img src="ressources\logo_Formhacktion_black-removebg-preview.png" alt="LOGO"
+            class="logo-entree mx-auto d-block">
+    </div>
+    <div class=" catchphrase container w-50 p-3">
+        <p class="text-center mx-5">
+            Apprenez à protéger votre environement numérique
+        </p>
+    </div>
+    <!--     <a href="#formations">
+        <div class="button-1">
+            <p class="label">
+                CONSULTEZ NOS FORMATIONS
+            </p>
+        </div>
+    </a> -->
+    <br>
+    <br>
+    <br>
+
+    <a href="#formations" class="btn btn-primary btn-lg button-2 ms-3" role="button" data-bs-toggle="button">CONSULTEZ
+        NOS FORMATIONS</a>
+
+
+
+
     <div id="formations" class="container-fluid overlap-group">
         <div class="container">
             <br>
@@ -34,6 +48,7 @@
                 <div class="col-md-4">
                     <div class="formation-resume px-3 pt-3">
                         <h1 class="formation-nom">SÉCURITÉ E-MAILS</h1>
+                        <hr class="hr">
                         <p class="description">
                             Description : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia justo
                             leo,
@@ -51,7 +66,8 @@
                 </div>
                 <div class="col-md-4">
                     <div class="formation-resume px-3 pt-3">
-                        <h1 class="formation-nom">SÉCURITÉ E-MAILS</h1>
+                        <h1 class="formation-nom">GESTION DES MOTS DE PASSE</h1>
+                        <hr class="hr">
                         <p class="description">
                             Description : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia justo
                             leo,
@@ -69,7 +85,8 @@
                 </div>
                 <div class="col-md-4">
                     <div class="formation-resume px-3 pt-3">
-                        <h1 class="formation-nom">SÉCURITÉ E-MAILS</h1>
+                        <h1 class="formation-nom">SÉCURITÉ DES RÉSEAUX INFORMATIQUES</h1>
+                        <hr class="hr">
                         <p class="description">
                             Description : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia justo
                             leo,
@@ -89,7 +106,8 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="formation-resume px-3 pt-3">
-                        <h1 class="formation-nom">SÉCURITÉ E-MAILS</h1>
+                        <h1 class="formation-nom">PROTECTION DES DONNÉES</h1>
+                        <hr class="hr">
                         <p class="description">
                             Description : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia justo
                             leo,
@@ -107,7 +125,8 @@
                 </div>
                 <div class="col-md-4">
                     <div class="formation-resume px-3 pt-3">
-                        <h1 class="formation-nom">SÉCURITÉ E-MAILS</h1>
+                        <h1 class="formation-nom">NAVIGATION WEB</h1>
+                        <hr class="hr">
                         <p class="description">
                             Description : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi lacinia justo
                             leo,
