mentions légales + politique de confidentialité

--- a/confidentialité.html
+++ b/confidentialité.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
-    <title>Conditions générales d'utilisation</title>
+    <title>Politique de confidentialité</title>
 </head>
 
 <body class="background">
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="col-md-12">
             <br>
-            <h1 class="formation-nom">CONDITIONS GÉNÉRALES D'UTILISATION</h1>
+            <h1 class="formation-nom">POLITIQUE DE CONFIDENTIALITÉ</h1>
             <br>
             <p class="description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus id faucibus est, sed eleifend
