--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
     <title>FormHack'tion</title>
 </head>
 
@@ -202,6 +203,8 @@
                     <p class="footer-nom fs-1">
                         FormHack'tions
                     </p>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-linkedin"></i>
                 </div>
                 <!-- Grid column -->
 
@@ -209,11 +212,10 @@
                 <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                     <!-- Links -->
                     <h6 class="fs-4">Informations</h6>
-                    <hr>
-                    <a href="#!" class="text-white">Contacts</a><br>
-                    <a href="#!" class="text-white">Conditions générales d'utilisation</a><br>
-                    <a href="#!" class="text-white">Politique de confidentialité</a><br>
-                    <a href="#!" class="text-white">Mentions légales</a><br>
+                    <a href="" class="text-white">Contacts</a><br>
+                    <a href=".\cgu.html" class="text-white">Conditions générales d'utilisation</a><br>
+                    <a href=".\confidentialité.html" class="text-white">Politique de confidentialité</a><br>
+                    <a href=".\légales.html" class="text-white">Mentions légales</a><br>
                 </div>
                 <!-- Grid column -->
             </div>
@@ -224,7 +226,7 @@
 
     <!-- Copyright -->
     <div class="text-center p-3">
-        © Tous droit réservé 2022 “FormHack’tion”
+        © Tous droit réservé 2023 “FormHack’tion”
     </div>
     <!-- Copyright -->
 </footer>
