--- a/légales.html
+++ b/légales.html
@@ -159,8 +159,8 @@
                     <p class="footer-nom fs-1">
                         FormHack'tions
                     </p>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-square-twitter fa-2xl"></i>
+                    <i class="fa-brands fa-linkedin fa-2xl"></i>
                 </div>
                 <!-- Grid column -->
 
@@ -168,7 +168,7 @@
                 <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                     <!-- Links -->
                     <h6 class="fs-4">Informations</h6>
-                    <a href="#!" class="text-white">Contacts</a><br>
+                    <a href=".\contacts.html" class="text-white">Contacts</a><br>
                     <a href=".\cgu.html" class="text-white">Conditions générales d'utilisation</a><br>
                     <a href=".\confidentialité.html" class="text-white">Politique de confidentialité</a><br>
                     <a href=".\légales.html" class="text-white">Mentions légales</a><br>
